--- a/api_yamdb/requirements.txt
+++ b/api_yamdb/requirements.txt
@@ -1,3 +1,4 @@
+django-import-export
 Django==2.2.16
 django-filter==2.4.0
 djangorestframework==3.12.4
@@ -9,3 +10,6 @@ pytz==2020.1
 sqlparse==0.3.1
 asgiref==3.2.10
 python-dotenv==0.21.1
+pytest==6.2.4
+pytest-django==4.4.0
+pytest-pythonpath==0.7.3
